--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,10 @@
     <color name="write">#FFFFFF</color>
     <color name="theme">#AA00D8A0</color>
     <color name="bottom_navigation_normal">#CCCCCC</color>
-
+    <color name="transparent">#00000000</color>
+    <color name="grey_text_color_normal">#8A8A8A</color>
+    <color name="grey_line_bg">#E4E4E4</color>
+    <color name="deep_transparent">#bb000000</color>
+    <color name="grey_normal_bg">#EEEEEE</color>
+    <color name="black">#000000</color>
 </resources>
