--- a/app/src/main/res/layout/staggered_recycler_view_item.xml
+++ b/app/src/main/res/layout/staggered_recycler_view_item.xml
@@ -7,7 +7,7 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         card_view:cardCornerRadius="4dp"
@@ -21,11 +21,12 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/iv_market_item_pic"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/ic_market_totop"/>
+            <ImageView
+                android:layout_gravity="center"
+                android:id="@+id/iv_market_item_pic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"/>
 
             <TextView
                 android:id="@+id/tv_market_item_name"
@@ -33,7 +34,6 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:padding="2dp"
-                android:text="火箭"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="20sp"
