--- a/app/src/main/res/layout/fragment_fragment__self_information_center.xml
+++ b/app/src/main/res/layout/fragment_fragment__self_information_center.xml
@@ -22,8 +22,7 @@
                 android:id="@+id/user_head"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:layout_margin="10dp"
-                android:background="#BBFFB5C4" />
+                android:layout_margin="10dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
