--- a/app/src/main/res/layout/fragment_fragment__forum.xml
+++ b/app/src/main/res/layout/fragment_fragment__forum.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragment.Fragment_Forum">
 
+    <WebView
+        android:id="@+id/wv_forumfragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </WebView>
 
-
-
-</FrameLayout>
+</LinearLayout>
