--- a/app/src/main/res/layout/add_search_item.xml
+++ b/app/src/main/res/layout/add_search_item.xml
@@ -22,7 +22,7 @@
                 android:textColor="#000000"
                 android:gravity="center_vertical"
                 android:layout_marginLeft="5dp"
-                android:text="离散数学"
+                android:text=""
                 android:textStyle="bold"
                 android:textSize="20sp"
                 android:layout_height="0dp" />
@@ -38,17 +38,9 @@
                     android:id="@+id/searchTeacher"
                     android:textSize="18sp"
                     android:gravity="center"
-                    android:text="吴永贤"
+                    android:text=""
                     android:layout_height="match_parent" />
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_weight="2"
-                    android:id="@+id/searchMajor"
-                    android:gravity="center"
-                    android:textColor="#000000"
-                    android:textSize="18dp"
-                    android:text="18信安"
-                    android:layout_height="match_parent" />
+
             </LinearLayout>
 
 
