暂时完成课程表，可以开始界面优化

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="deep_transparent">#bb000000</color>
     <color name="grey_normal_bg">#EEEEEE</color>
     <color name="black">#000000</color>
+    <color name="smssdk_white">#ffffffff</color>
 </resources>
