--- a/app/src/main/res/layout/layout_market_goods_detail_content_bottom.xml
+++ b/app/src/main/res/layout/layout_market_goods_detail_content_bottom.xml
@@ -17,21 +17,45 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-
         <!--没有这个不能上拉-->
         <TextView
             android:id="@+id/duummy"
-            android:padding="@dimen/spacing_small"
+            android:padding="5dp"
             android:text="  "
             style="@style/whiteTextStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-        <!--使照片完全显示防止按钮遮挡-->
-        <!--<TextView-->
-            <!--android:text="  "-->
-            <!--android:padding="@dimen/spacing_small"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content" />-->
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/grey_normal_bg"
+            android:padding="@dimen/spacing_smallest">
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="0.5dp"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="@dimen/spacing_normal"
+                android:layout_toLeftOf="@+id/tv_good_detail_tuodong"
+                android:background="@color/deep_transparent" />
+
+            <TextView
+                android:id="@+id/tv_good_detail_tuodong"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="已到最底"
+                android:textSize="@dimen/font_small" />
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="0.5dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/spacing_normal"
+                android:layout_toRightOf="@+id/tv_good_detail_tuodong"
+                android:background="@color/deep_transparent" />
+        </RelativeLayout>
 
 
     </LinearLayout>
