--- a/app/src/main/res/layout/my_goods_recycler_view_item.xml
+++ b/app/src/main/res/layout/my_goods_recycler_view_item.xml
@@ -9,7 +9,8 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
-        android:scaleType="fitXY"
+        android:background="@drawable/ic_new_img_loading_1"
+        android:scaleType="centerCrop"
         android:layout_margin="5dp"/>
 
 
