--- a/app/src/main/res/layout/activity__market__goods_detail.xml
+++ b/app/src/main/res/layout/activity__market__goods_detail.xml
@@ -38,11 +38,12 @@
         <TextView
             android:paddingTop="@dimen/spacing_smallest"
             android:gravity="center_vertical"
-            android:textColor="@color/transparent"
+            android:textColor="#000"
+            android:textStyle="bold"
+            android:textSize="20sp"
             android:paddingLeft="@dimen/spacing_tiny"
             android:paddingRight="@dimen/spacing_tiny"
             android:id="@+id/tv_good_detail_title_good"
-            style="@style/colorPrimaryTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
