--- a/app/src/main/res/drawable/bg_radius_sign_btn.xml
+++ b/app/src/main/res/drawable/bg_radius_sign_btn.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle" >
 
     <!-- 填充的颜色 -->
-    <solid android:color="#9507a6e6" />
+    <solid android:color="@color/theme" />
 
     <!-- 设置按钮的四个角为弧形 -->
     <!-- android:radius 弧形的半径 -->
