--- a/app/src/main/res/layout/activity__about_us.xml
+++ b/app/src/main/res/layout/activity__about_us.xml
@@ -23,6 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.7"
             android:gravity="center"
+            android:textColor="#fff"
             android:text="关于我们"
             android:textSize="16sp" />
 
