--- a/app/src/main/res/layout/activity__account_info.xml
+++ b/app/src/main/res/layout/activity__account_info.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.7"
             android:gravity="center"
-            android:textColor="#000000"
+            android:textColor="#fff"
             android:text="个人信息"
             android:textSize="16sp" />
 
