--- a/app/src/main/res/layout/activity__course_note.xml
+++ b/app/src/main/res/layout/activity__course_note.xml
@@ -24,19 +24,19 @@
             android:text="+"
             android:textSize="25sp"
             android:textColor="@color/smssdk_white"
-            android:background="@color/colorThem"/>
+            android:background="@color/theme"/>
         <Button
             android:id="@+id/img"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:background="@null" />
+            android:background="@color/theme" />
         <Button
             android:id="@+id/video"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:background="@null" />
+            android:background="@color/theme" />
     </LinearLayout>
 
 </LinearLayout>
