--- a/app/src/main/res/layout/activity__password.xml
+++ b/app/src/main/res/layout/activity__password.xml
@@ -23,11 +23,11 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.7"
             android:gravity="center"
-            android:textColor="#000000"
+            android:textColor="#fff"
             android:text="修改密码"
             android:textSize="16sp" />
 
-        <Button
+        <TextView
             android:id="@+id/btn_modifypassword_upload"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -35,7 +35,7 @@
             android:padding="8dp"
             android:text="确认"
             android:gravity="center"
-            android:textColor="#404040"
+            android:textColor="#fff"
             android:textSize="14sp" />
     </LinearLayout>
 
