--- a/app/src/main/res/layout/activity__register.xml
+++ b/app/src/main/res/layout/activity__register.xml
@@ -22,6 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.7"
             android:gravity="center"
+            android:textColor="#fff"
             android:text="注册"
             android:textSize="16sp" />
 
@@ -33,7 +34,7 @@
             android:gravity="center"
             android:padding="8dp"
             android:text="登录"
-            android:textColor="#404040"
+            android:textColor="#fff"
             android:textSize="14sp" />
     </LinearLayout>
 
@@ -76,15 +77,17 @@
                 android:textColorHint="@android:color/darker_gray"
                 android:textSize="14sp" />
 
-            <Button
+            <com.example.classchat.Util.TimingButton
                 android:id="@+id/bn_sms_code"
                 android:layout_width="88dp"
                 android:layout_height="28dp"
                 android:layout_marginRight="6dp"
-                android:background="@drawable/bg_radius_register_btn"
                 android:text="获取验证码"
-                android:textColor="#9507a6e6"
-                android:textSize="12sp" />
+                android:textColor="@color/theme"
+                app:tb_psText="重新获取"
+                app:tb_totalTime="60000"
+                android:textSize="12sp"
+                android:background="@drawable/bg_radius_register_btn"/>
         </LinearLayout>
 
         <View
