--- a/app/src/main/res/layout/fragment_market.xml
+++ b/app/src/main/res/layout/fragment_market.xml
@@ -13,7 +13,8 @@
         android:text="唠课商城"
         android:gravity="center"
         android:textSize="25sp"
-        android:textColor="@color/theme"
+        android:textColor="#ffffff"
+        android:background="@color/theme"
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"/>
 
