--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorThem">#9507a6e6</color>
+    <color name="colorThem">#9507a6</color>
     <color name="write">#FFFFFF</color>
-    <color name="theme">#AA00D8A0</color>
+    <color name="theme">#BB00D8A0</color>
     <color name="bottom_navigation_normal">#CCCCCC</color>
     <color name="transparent">#00000000</color>
     <color name="grey_text_color_normal">#8A8A8A</color>
@@ -14,4 +14,5 @@
     <color name="grey_normal_bg">#EEEEEE</color>
     <color name="black">#000000</color>
     <color name="smssdk_white">#ffffffff</color>
+    <color name="forum_gray">#EEEEEE</color>
 </resources>
