作出了一定量的修改及其更正

--- a/app/src/main/res/layout/activity__market__goods_detail.xml
+++ b/app/src/main/res/layout/activity__market__goods_detail.xml
@@ -38,11 +38,12 @@
         <TextView
             android:paddingTop="@dimen/spacing_smallest"
             android:gravity="center_vertical"
-            android:textColor="@color/transparent"
+            android:textColor="#000"
+            android:textStyle="bold"
+            android:textSize="20sp"
             android:paddingLeft="@dimen/spacing_tiny"
             android:paddingRight="@dimen/spacing_tiny"
             android:id="@+id/tv_good_detail_title_good"
-            style="@style/colorPrimaryTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
@@ -54,8 +55,9 @@
             android:id="@+id/iv_good_detail_shopping_cart"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_toLeftOf="@+id/iv_good_detail_share"
+            android:layout_alignParentRight="true"
             android:paddingLeft="@dimen/spacing_smaller"
+            android:paddingRight="@dimen/spacing_small"
             android:src="@drawable/ic_market_goods_detail_shopping_cart" />
 
         <ImageView
@@ -67,7 +69,8 @@
             android:layout_alignParentRight="true"
             android:paddingLeft="@dimen/spacing_smaller"
             android:paddingRight="@dimen/spacing_small"
-            android:src="@drawable/ic_market_goods_detail_share" />
+            android:src="@drawable/ic_market_goods_detail_share"
+            android:visibility="gone"/>
     </RelativeLayout>
 
     <LinearLayout
