--- a/app/src/main/res/layout/activity__market__my_goods.xml
+++ b/app/src/main/res/layout/activity__market__my_goods.xml
@@ -22,7 +22,9 @@
             android:layout_weight="0.7"
             android:gravity="center"
             android:text="我的商品"
-            android:textSize="16sp" />
+            android:textStyle="bold"
+            android:textColor="#303235"
+            android:textSize="20sp" />
 
         <TextView
             android:layout_width="0dp"
