--- a/app/src/main/res/layout/fragment_market.xml
+++ b/app/src/main/res/layout/fragment_market.xml
@@ -11,8 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="唠课商城"
+        android:textStyle="bold"
         android:gravity="center"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:textColor="#ffffff"
         android:background="@color/theme"
         android:layout_alignParentTop="true"
