--- a/app/src/main/res/layout/my_goods_recycler_view_item.xml
+++ b/app/src/main/res/layout/my_goods_recycler_view_item.xml
@@ -8,8 +8,9 @@
         android:id="@+id/iv_market_my_goods_pic"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:background="@drawable/ic_new_img_loading_1"
         android:layout_gravity="center"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:layout_margin="5dp"/>
 
 
