--- a/app/src/main/res/menu/tabletime_menu.xml
+++ b/app/src/main/res/menu/tabletime_menu.xml
@@ -32,5 +32,15 @@
         android:icon="@drawable/icon_purple_round5"
         android:title="隐藏周末"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/menu_scan"
+        android:icon="@drawable/icon_purple_round6"
+        android:title="扫一扫"
+        app:showAsAction="always"/>
+    <item
+        android:id="@+id/menu_export"
+        android:icon="@drawable/icon_purple_round3"
+        android:title="生成课表二维码"
+        app:showAsAction="always"/>
 
 </menu>
