--- a/app/src/main/res/layout/activity__enter.xml
+++ b/app/src/main/res/layout/activity__enter.xml
@@ -49,7 +49,7 @@
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/logo" />
+            android:src="@drawable/app_logo" />
     </LinearLayout>
 
     <LinearLayout
