--- a/app/src/main/res/layout/layout_market_goods_detail_content_top.xml
+++ b/app/src/main/res/layout/layout_market_goods_detail_content_top.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scrollbars="none"
+    android:background="#E4E4E4"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
@@ -25,15 +26,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:background="#fff"
             android:padding="@dimen/spacing_smaller">
 
             <TextView
                 android:id="@+id/tv_market_goods_detail_item_name"
                 android:textStyle="bold"
-                android:textSize="30sp"
+                android:textSize="20sp"
+                android:padding="2dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLines="2"
+                android:textColor="#000"
                 android:textAlignment="center"/>
 
 
@@ -61,10 +65,11 @@
                     android:layout_width = "0dip"
                     android:layout_weight="8"
                     android:layout_height="wrap_content"
-                    android:textSize="20sp"
                     android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:layout_marginLeft="5dp"
                     android:maxLines="1"
-                    android:textColor="#C08F04"/>
+                    android:textColor="@color/theme"/>
 
                 <com.hch.thumbsuplib.ThumbsUpCountView
                     android:id="@+id/market_goods_detail_item_thumb"
@@ -96,8 +101,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="@dimen/spacing_small">
+            android:background="@drawable/layout_linearlayout_frame"
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -109,8 +114,7 @@
                 android:id="@+id/tv_market_goods_detail_item_detail_info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:textColor="#000"/>
+                android:textSize="15sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
