--- a/app/src/main/res/layout/staggered_recycler_view_item.xml
+++ b/app/src/main/res/layout/staggered_recycler_view_item.xml
@@ -38,7 +38,7 @@
                 android:padding="2dp"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
-                android:textSize="20sp"
+                android:textSize="15sp"
                 android:textStyle="bold"/>
 
             <LinearLayout
@@ -46,13 +46,18 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <ImageView
+
+                <TextView
                     android:layout_width="0dip"
-                    android:layout_weight="1"
+                    android:text="LKB"
+                    android:textColor="@color/theme"
+                    android:textSize="10sp"
+                    android:textAlignment="center"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="2dp"
                     android:layout_gravity="start|center"
-                    android:background="@drawable/ic_market_item_price"/>
+                    android:layout_weight="2"
+                    android:paddingLeft="2dp" />
+
                 <TextView
                     android:id="@+id/tv_market_item_price"
                     android:layout_width="0dip"
@@ -62,18 +67,18 @@
                     android:textAlignment="center"
                     android:text="435"
                     android:textSize="15sp"
-                    android:textColor="#C08F04"
+                    android:textColor="@color/theme"
                     android:textStyle="bold"/>
 
 
 
-                <com.hch.thumbsuplib.ThumbsUpCountView
-                    android:id="@+id/market_item_thumb"
-                    android:layout_width="0dip"
-                    android:layout_weight="4"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="5dp">
-                </com.hch.thumbsuplib.ThumbsUpCountView>
+                <!--<com.hch.thumbsuplib.ThumbsUpCountView-->
+                    <!--android:id="@+id/market_item_thumb"-->
+                    <!--android:layout_width="0dip"-->
+                    <!--android:layout_weight="4"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:layout_marginTop="5dp">-->
+                <!--</com.hch.thumbsuplib.ThumbsUpCountView>-->
             </LinearLayout>
 
             <LinearLayout
